@@ -1,3 +1,9 @@
+2006-02-12  Guilhem Lavaux  <guilhem@kaffe.org>
+
+	* kaffe/kaffevm/stackTrace.c
+	(printStackTrace): We handle now exceptions which are caused by some
+	other in the backup print stack trace.
+	
 2006-02-12  Dalibor Topic  <robilad@kaffe.org>
 
 	Fix for #16.
